Buscar por categoria

--- a/angular-bookstore/src/app/app.component.html
+++ b/angular-bookstore/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8" />
@@ -40,6 +40,18 @@
                         </ul>
                     </li>
                 </ul>
+                <!--añado botón buscar-->
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <input type="text" class="form-control" placeholder= "Buscar libros">
+                        </div>
+                        <div class="col md-2">
+                            <button class="submit" class="btn-outline-dark">Buscar</button>
+                        </div>
+                    </div>
+                </div>
+                <!--fin boton buscar-->
                 <form class="d-flex">
                     <button class="btn btn-outline-dark" type="submit">
                         <i class="bi-cart-fill me-1"></i>
@@ -61,7 +73,7 @@
     </header>
     <!-- Section-->
     <div class="container px-4 px-lg-5 mt-5">
-        <app-book-list></app-book-list>
+        <router-outlet></router-outlet>
     </div>
     <!-- Footer-->
     <footer class="py-5 bg-dark">
