--- a/angular-bookstore/src/app/components/book-list/book-grid.component.html
+++ b/angular-bookstore/src/app/components/book-list/book-grid.component.html
@@ -1,23 +1,41 @@
-<div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-    <div class="col mb-5" *ngFor="let book of Books">
-        <div class="card h-100">
-            <!-- Product image-->
-            <img class="card-img-top img-responsive" [src]= "book.imageUrl"/>
-            <!-- Product details-->
-            <div class="card-body p-4">
-                <div class="text-center">
-                    <!-- Product name-->
-                    <h5 class="fw-bolder">{{book.name}}</h5>
-                    <!-- Product price-->
-                    {{book.description}}
-                    <br>
-                    {{book.unitPrice | currency: 'INR'}}
-                </div>
-            </div>
-            <!-- Product actions-->
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <div class="text-center"><button class= "btn btn-outline-dark">Comprar </button></div>
-            </div>
+<div class="row">
+    <div class= "col-lg-3">
+        <div class="list-group">
+            <a routerLink="/category/1" class="list-group-item"
+            routerLinkActive="bg-dark text-white font-weight-bold">Libros de texto</a>
+            <a routerLink="/category/2" class="list-group-item"
+            routerLinkActive="bg-dark text-white font-weight-bold">Fantasia</a>
+            <a routerLink="/category/3" class="list-group-item"
+            routerLinkActive="bg-dark text-white font-weight-bold">Programación</a>
+            <a routerLink="/category/4" class="list-group-item"
+            routerLinkActive="bg-dark text-white font-weight-bold">Bases de datos</a>
         </div>
     </div>
+    <div class="col-lg-9">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of Books">
+                <div class="card h-100">
+                    <!-- Product image-->
+                    <img class="card-img-top img-responsive" [src]= "book.imageUrl"/>
+                    <!-- Product details-->
+                    <div class="card-body p-4">
+                        <div class="text-center">
+                            <!-- Product name-->
+                            <h5 class="fw-bolder">{{book.name}}</h5>
+                            <!-- Product price-->
+                            {{book.description}}
+                            <br>
+                            {{book.unitPrice | currency: 'INR'}}
+                        </div>
+                    </div>
+                    <!-- Product actions-->
+                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                        <div class="text-center"><button class= "btn btn-outline-dark">Comprar </button></div>
+                    </div>
+                </div>
+            </div>
+        </div>  
+    </div>
 </div>
+
+
